--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "bun run src/raw/index.ts",
     "dev": "bun --watch run src/raw/index.ts",
     "test": "bun test",
-    "test:watch": "bun test --watch"
+    "test:watch": "bun test --watch",
+    "build": "bun build --compile --outfile=mud-client src/raw/index.ts"
   },
   "dependencies": {},
   "devDependencies": {
