--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "bun --watch run src/raw/index.ts",
     "test": "bun test",
     "test:watch": "bun test --watch",
-    "build": "bun build --compile --outfile=mud-client src/raw/index.ts"
+    "build": "bun build --compile --outfile=mud-client src/raw/index.ts",
+    "release": "gh release create --generate-notes"
   },
   "dependencies": {},
   "devDependencies": {
